# wikmd

./: .gitignore  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  TODO.md  cache.py  cleanup.py  config.py  config.yaml  git_manager.py  image_manager.py  knowledge-graph.py  knowledge_graph.py  main.yml  pyproject.toml  requirements.txt  search.py  utils.py  wd.py  web_dependencies.py  wiki.py  wikmd-config.yaml
.github/: FUNDING.yml  pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: docker.yml  main.yml  publish-pypi  publish-pypi.yml
config/systemd/: wiki-ng.service
docker/: Dockerfile  Dockerfile.aarch64  Dockerfile.armhf  README.md
docker/root/etc/cont-init.d/: 30-config
docker/root/etc/services.d/wikmd/: run
docs/: Customization.md  Screenshots.md  Using the wiki.md  connect_git_and_online_repo.md  development.md  environment variables.md  index.md  installation.md  knowledge graph.md  plugins.md  yaml-configuration.md
docs/installation/: docker.md  regular_install.md
plugins/: draw.py  load_plugins.py
plugins/alerts/: alerts.py
plugins/draw/: draw.py
plugins/embed-pages/: embed-pages.py
plugins/mermaid/: mermaid.py
src/: config.py  wiki.py
src/plugins/alerts/: alerts.py
src/plugins/draw/: draw.py
src/plugins/embed-pages/: embed-pages.py
src/wikmd/: config.py  git_manager.py  image_manager.py  knowledge_graph.py  plugin_manager.py  search.py  utils.py  web_dependencies.py  wiki.py  wikmd-config.yaml
src/wikmd/plugins/: load_plugins.py
src/wikmd/plugins/alerts/: alerts.py
src/wikmd/plugins/draw/: default_draw  draw.py
src/wikmd/plugins/embed-pages/: embed-pages.py
src/wikmd/plugins/mermaid/: mermaid.py
src/wikmd/plugins/plantuml/: plantuml.py
src/wikmd/plugins/swagger/: swagger.py
src/wikmd/static/css/: codemirror.custom.css  wiki.colors.css  wiki.css  wiki.dark.css
src/wikmd/static/js/: copypaste.js  dark-theme.js  wikmd.js
src/wikmd/templates/: base.html  base2.html  content.html  index.html  knowledge-graph.html  list_files.html  login.html  new.html  search.html  sidebar.html
src/wikmd/wiki_template/: Features.md  homepage.md
static/css/: ayu-mirage.css  codemirror.custom.dark.css  dark_theme.css  filepond.dark.css  wiki.colors.css  wiki.css  wiki.dark.css
static/js/: copypaste.js  drawio.js
temp/: Features.md  How to use the wiki.md  Markdown cheatsheet.md  homepage.md
templates/: base.html  content.html  index.html  knowledge-graph.html  leftsidebar.html  list_files.html  login.html  new.html  search.html
tests/: test_basics.py  test_plugins.py  test_search.py
tools/: default_sidebar.yaml  sidebar.py
wiki/: Features.md  How to use the wiki.md  Markdown cheatsheet.md  Using the version control system.md  homepage.md
wiki_template/: How to use the wiki.md  Using the version control system.md
